--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "cypress-jenkins",
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
